--- a/test/expected/jade.html
+++ b/test/expected/jade.html
@@ -3,7 +3,8 @@
 <h2 id="content">Content</h2><p>This is test content to be rendered.</p>
 <pre><code class="language-html">&lt;section&gt;
     &lt;p&gt;I wonder if this also works?&lt;/p&gt;
-&lt;/section&gt;</code></pre>
+&lt;/section&gt;
+</code></pre>
 <h2 id="conclusion">Conclusion</h2><p>Finally, I hope that:</p>
 <ul>
 <li>This works;</li>
